add extra logging for quartz, hibernate, garbage collection (#61)
* add more logging for quartz and for hibernate transactions

* add GC logging to Dockerfile